Fix text overlap on resize

--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -101,7 +101,7 @@
   }
 }
 
-@media screen and (max-width: 356px) {
+@media screen and (max-width: 361px) {
   #root {
     font-size: 50%;
   }
