--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,7 @@ button {
   }
 }
 
-@media screen and (max-width: 356px) {
+@media screen and (max-width: 361px) {
   #root {
     font-size: 50%;
   }
